ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-ingress
  labels:
    source: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#Add this line to avoid infinite redirection error
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - argocd.dev.com
      secretName: argocd-cert # < cert-manager will store the created certificate in this secret.
  rules:
    - host: argocd.dev.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            #            path: /(.*)
            path: /
            pathType: Prefix
          - backend:
              service:
                name: argocd-server
                port:
                  number: 443
            path: /
            pathType: Prefix
